<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/library_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_added"
                    android:title="@string/library_sort_added" />
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/library_sort_title" />
                <item
                    android:id="@+id/sort_rating"
                    android:title="@string/library_sort_rating" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about_title"
        app:showAsAction="ifRoom" />
</menu>
